--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -15,7 +15,7 @@ spec:
         app: vote-ui
     spec:
       containers:
-        - image: quay.io/adhis/argo-05
+        - image: quay.io/adhis/argo-05;latest
           imagePullPolicy: Always
           name: vote-ui
           ports:
